<resources>
    <string name="app_name">LayoutRevision</string>

    <string name="main_text1">Login</string>
    <string name="main_text2">Email</string>
    <string name="main_text3">Password</string>
    <string name="main_text4">Remember Me</string>
    <string name="main_text5">No account yet?</string>
    <string name="main_hint1">John@gmail.com</string>
    <string name="main_btn1">Login</string>
    <string name="main_btn2">Create an Account</string>
    <string name="main_btn3">Go to Day 3</string>

    <string name="linearlayout_text1">Welcome Back!</string>
    <string name="linearlayout_text2">Your items are listed below.</string>
    <string name="linearlayout_btn">Go to FrameLayout</string>

    <string name="framelayout_text1">Fragment Selector.</string>
    <string name="framelayout_text2">Select a fragment to display.</string>

    <string name="tablelayout_text1">Table and Relative Layout</string>
    <string name="tablelayout_text2">Following content is positioned using table layout</string>
    <string name="tablelayout_text3">Text 1</string>
    <string name="tablelayout_text4">Text 2</string>
    <string name="tablelayout_text5">Text 3</string>
    <string name="tablelayout_text6">Heading 1</string>
    <string name="tablelayout_text7">Heading 2</string>
    <string name="tablelayout_text8">Heading 3</string>
    <string name="tablelayout_text9">Following content is positioned using relative layout</string>
    <string name="tablelayout_btn1">Go to Table and Relative Layout</string>

    <string name="dayThree_text1">Day 03 Content</string>
    <string name="dayThree_btn1">List View</string>
    <string name="dayThree_btn2">Recycler View</string>
    <string name="dayThree_btn3.1">Dialog 1</string>
    <string name="dayThree_btn3.2">Dialog 2</string>
    <string name="dayThree_btn3.3">Dialog 3</string>
    <string name="dayThree_btn4">Toasts</string>
    <string name="dayThree_btn5">Bottom Sheets</string>
    <string name="dayThree_btn6">Navigation Drawer</string>
    <string name="dayThree_btn7">Tabs</string>
    <string name="dayThree_btn8">Material Designs</string>
    <string name="dayThree_btn9">Animations</string>

    <string name="listView_text1">ListView</string>
    <string name="listView_text2">Below content is displayed using listview</string>

    <string name="recyclerView_text1">RecyclerView</string>
    <string name="recyclerView_text2">Below content is displayed using recyclerview</string>

    <string name="feedbackBottomSheet_text1">Give Feedback!</string>
    <string name="feedbackBottomSheet_text2">We value your support.</string>
    <string name="feedbackBottomSheet_edittext">Write something...</string>
    <string name="feedbackBottomSheet_btn1">Submit</string>

    <string name="animations_btn1">Show Animation 1</string>
    <string name="animations_btn2">Show Animation 2</string>

    <string name="itemcard_text1">Product Name:</string>
    <string name="itemcard_text2">Sample Name</string>
    <string name="itemcard_text3">Price:</string>
    <string name="itemcard_text4">Rs. 3000</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="hello_blank_fragment3">Hello blank fragment3</string>
    <string name="display1">Display 1</string>
    <string name="display2">Display 2</string>
    <string name="display3">Display 3</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>

</resources>