<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayThreeActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/dayThree_text1"
        android:textColor="@color/blue4"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <Button
            android:id="@+id/button17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn1"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn2"
            app:cornerRadius="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue1"
                android:text="@string/dayThree_btn3.1"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/button25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue1"
                android:text="@string/dayThree_btn3.2"
                app:cornerRadius="10dp" />

        </LinearLayout>

        <Button
            android:id="@+id/button20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn4"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn5"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn6"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn7"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/blue1"
            android:text="@string/dayThree_btn9"
            app:cornerRadius="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>